Fixed spacing between FAQ question and answers

--- a/public/styles.css
+++ b/public/styles.css
@@ -166,6 +166,9 @@
   background-repeat: no-repeat;
   background-position: left;
 }
+.questions{
+  line-height: 29px;
+}
 
 .faq-head {
   font-family: "Rubik";
@@ -260,6 +263,7 @@
 
 .answer {
   font-family: "rubik";
+
   line-height: 28px;
   padding-left: 60px;
   font-size: 14px;
@@ -545,6 +549,7 @@ html {
 
   .questions {
     width: 310px;
+    line-height:10px;
   }
 
 }
